# ASC-ODE-team-02

./: CMakeLists.txt
Report/: Report.md
Report_final/: auto_diff_report.ipynb  report_chapter_19_and_20.ipynb
demos/: legendre_data.txt  legendre_poly_autodiff.cpp  pendulum_autodiff.cpp  plot_legendre.py  plot_rk.py  plotcircuit.py  plotmassspring_multi.py  test_explicit_rk.cpp  test_ode.cpp  test_ode_circuit.cpp  test_ode_new.cpp
mechsystem/: bind_mass_spring.cpp  mass_spring.cpp  mass_spring.hpp  mass_spring.ipynb  mass_spring_chain.ipynb  test_mass_spring.py
mechsystem/.ipynb_checkpoints/: mass_spring-checkpoint.ipynb  mass_spring_chain-checkpoint.ipynb
src/: CMakeLists.txt  autodiff.hpp  explicitRK.hpp  timestepper.hpp
